[package]
name = "cow-factors"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.3"
errorfunctions = "0.2.0"
rand = "0.8.5"
plotters = "0.3.6"
knn = "0.1.3"
ganesh = "0.4.0"
rayon = "1.10.0"
indicatif = "0.17.8"
clap = { version = "4.5.15", features = ["derive"] }
polars = { version = "0.41.3", features = ["csv", "lazy"] }
